# edgc-node

./: CMakeLists.txt  build.sh  flops.c  main.c  mpi_bandwidth.c  utils.c
include/: flops.h  utils.h
